# prettyprinter-combinators

./: .gitignore  ChangeLog.org  Changelog.md  LICENSE  Readme.md  Readme.org  prettyprinter-combinators.cabal  stack.yaml
.github/workflows/: haskell-ci.yaml
src/Data/Text/Prettyprint/Doc/: Combinators.hs  Data.hs  Generics.hs  MetaDoc.hs  Show.hs  TH.hs
src/Data/Text/Prettyprint/Doc/Combinators/: Basic.hs
src/Data/Text/Prettyprint/Doc/TH/: Utils.hs
src/Prettyprinter/: Combinators.hs  Data.hs  Generics.hs  MetaDoc.hs  Show.hs  TH.hs
src/Prettyprinter/Combinators/: Basic.hs
src/Prettyprinter/TH/: Utils.hs
test/: PrettyprinterCombinatorTests.hs
