cabal-version: 3.0

-- Created     :  21 March 2018

name:
  prettyprinter-combinators
version:
  0.1.0.0
synopsis:
  Some useful combinators for the prettyprinter package
description:
  TODO
license:
  BSD-2-Clause
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

library
  exposed-modules:
    Prettyprinter.Combinators
    Prettyprinter.Data
    Prettyprinter.Generics
    Prettyprinter.Show
    -- Prettyprinter.TH
  other-modules:
    Prettyprinter.Combinators.Basic
    Prettyprinter.MetaDoc
    -- Prettyprinter.Utils
  hs-source-dirs:
    src
  build-depends:
    base >= 4.7,
    bimap,
    bytestring,
    containers,
    dlist,
    hashable,
    mtl,
    prettyprinter >= 1.7,
    pretty-show,
    syb,
    template-haskell >= 2.10,
    text,
    vector,
    void,
    unordered-containers
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wall-missed-specialisations
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  ghc-prof-options:
    -fprof-auto

test-suite prettyprinter-combinator-tests
  type:
    exitcode-stdio-1.0
  main-is:
    test/PrettyprinterCombinatorTests.hs
  hs-source-dirs:
    . test
  build-depends:
    base,
    containers,
    prettyprinter,
    prettyprinter-combinators,
    unordered-containers,
    vector
  default-language:
    Haskell2010
  ghc-options:
    -rtsopts
    -main-is PrettyprinterCombinatorTests
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wall-missed-specialisations
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  ghc-prof-options:
    -fprof-auto
