cabal-version: 3.0

name:
  prettyprinter-combinators
version:
  0.1.0.0
synopsis:
  Some useful combinators for the prettyprinter package
description:
  TODO
license:
  BSD-2-Clause
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

common ghc-options
  default-language:
    Haskell2010

  ghc-options:
    -Weverything
    -Wno-type-defaults
    -Wno-implicit-prelude
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-safe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: ghc-options
  exposed-modules:
    Prettyprinter.Combinators
    Prettyprinter.Data
    Prettyprinter.Generics
    Prettyprinter.Show
    -- Prettyprinter.TH
  other-modules:
    Prettyprinter.Combinators.Basic
    Prettyprinter.MetaDoc
    -- Prettyprinter.Utils
  hs-source-dirs:
    src
  build-depends:
    base >= 4.7,
    bimap,
    bytestring,
    containers,
    dlist,
    prettyprinter >= 1.7,
    pretty-show,
    syb,
    template-haskell >= 2.10,
    text,
    vector,
    unordered-containers

test-suite prettyprinter-combinator-tests
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    test/PrettyprinterCombinatorTests.hs
  hs-source-dirs:
    . test
  build-depends:
    base,
    containers,
    prettyprinter,
    prettyprinter-combinators,
    unordered-containers,
    vector
  ghc-options:
    -rtsopts
    -main-is PrettyprinterCombinatorTests
