cabal-version: 3.0

name:
  prettyprinter-combinators
version:
  0.1.0.0
synopsis:
  Some useful combinators for the prettyprinter package
description:
  Various utilities that make writing Pretty instances easier.

  Notable utilites include automatic deriving of Pretty instance via
  Generic, Data, or Show instance.

license:
  Apache-2.0
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

common ghc-options
  default-language:
    Haskell2010

  ghc-options:
    -Weverything
    -Wno-type-defaults
    -Wno-implicit-prelude
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: ghc-options
  exposed-modules:
    Prettyprinter.Combinators
    Prettyprinter.Data
    Prettyprinter.Generics
    Prettyprinter.Show
  other-modules:
    Prettyprinter.Combinators.Basic
    Prettyprinter.MetaDoc
  hs-source-dirs:
    src
  build-depends:
    base >= 4.7,
    bimap,
    bytestring,
    containers,
    dlist,
    prettyprinter >= 1.7,
    pretty-show,
    syb,
    template-haskell >= 2.10,
    text,
    vector,
    unordered-containers
